--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -20,7 +20,7 @@
 
                 <div class="p-1 text-right">
 
-                    <span class="align-middle p-1">Por Luiz Otávio</span>
+                    <span class="align-middle p-1">Por Thiago Fonseca</span>
 
                 </div>
 
