--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
 
-    <a class="navbar-brand" href="index.html">Navbar</a>
+    <a class="navbar-brand" href="{% url 'produto:lista' %}">E-commerce</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 
