--- a/produto/templates/produto/detalhe.html
+++ b/produto/templates/produto/detalhe.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% load omfilters %}
 
+{% block titulo %}{{ produto.nome }} | {% endblock %}
+
 {% block conteudo %}
 <div class="row">
     <div class="col-lg">
         <div class="row no-gutters">
             <div class="col-lg-12">
                 {% if produto.imagem %}
-                <img class="{{ produto.imagem.url }}">
+                <img class="img-fluid" src="{{ produto.imagem.url }}">
                 {% endif %}
             </div>
         </div>
@@ -19,12 +21,15 @@
             <p class="lead">
                 {% if produto.preco_marketing_promocional %}
                 <span id="variation-preco-promocional" class="lead product-price">
-                    {{ produto.preco_marketing_promocional | formata_preco }}</span>
-                <span id="variation-preco"
-                    class="lead product-old-price text-muted">{{ produto.preco_marketing | formata_preco}}</span>
-                {% else %} 
+                    {{ produto.preco_marketing_promocional|formata_preco }}
+                </span>
+                <span id="variation-preco" class="lead product-old-price text-muted">
+                    {{ produto.preco_marketing|formata_preco }}
+                </span>
+                {% else %}
                 <span id="variation-preco" class="lead product-price">
-                    {{ produto.preco_marketing | formata_preco }}</span>
+                    {{ produto.preco_marketing|formata_preco }}
+                </span>
                 {% endif %}
             </p>
 
@@ -52,7 +57,7 @@
                             {% endif %}
                         </option>
                         {% endif %}
-                        
+
                         {% endfor %}
                     </select>
                 </div>
@@ -70,12 +75,14 @@
         </div>
     </div>
 </div>
+
 <div class="row">
     <div class="col-lg-12">
         <div class="mt-5 mb-5">
-            <h2 class="text-center">{{ produto.nome }}</h2>          
-            {{ produto.descricao_longa }}       
+            <h2 class="text-center">{{ produto.nome }}</h2>
+            {{ produto.descricao_longa|linebreaks }}
         </div>
     </div>
 </div>
-{% endblock  %}
+
+{% endblock %}
